--- a/public/now.json
+++ b/public/now.json
@@ -12,6 +12,8 @@
           "dest": "./index.html"
         }
     ],
-    "REACT_APP_API_KEY": "3d059b4c-36d5-4410-a546-f4b4e0870c4f",
-    "DB_URL": "https://cryptic-brook-57150.herokuapp.com/"
+    "env": {
+      "REACT_APP_API_KEY": "3d059b4c-36d5-4410-a546-f4b4e0870c4f",
+      "DB_URL": "https://cryptic-brook-57150.herokuapp.com/"
+    }
   }
